--- a/Pendulum Wave Animation/index.html
+++ b/Pendulum Wave Animation/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pendulum Wave Animation</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+      
+    </style>
+</head>
+<body>
+    <div class="container" id="pendulumContainer"></div>
 
+    <script src="./script.js"></script>
+</body>
+</html>
