--- a/Folding Paper/index.html
+++ b/Folding Paper/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Folding Paper Animation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="paper" id="paper">
+        <div class="fold"></div>
+        <div class="content">Surprise!</div>
+    </div>
+    <button id="foldButton">Fold Paper</button>
 
+ <script src="script.js"></script>
+</body>
+</html>
